Updated contacts.js to accept a POST, PUT and DELETE request
